samples/_failures_safe/1761073517_a0a16f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6233fccf.c: In function ‘main’:
./samples/SAFE/__tmp_6233fccf.c:132:28: error: expected ‘)’ at end of input
  132 |     add_log_entry(&analyzer
      |                  ~         ^
      |                            )
./samples/SAFE/__tmp_6233fccf.c:132:5: error: too few arguments to function ‘add_log_entry’
  132 |     add_log_entry(&analyzer
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_6233fccf.c:50:5: note: declared here
   50 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_6233fccf.c:132:5: error: expected declaration or statement at end of input
  132 |     add_log_entry(&analyzer
      |     ^~~~~~~~~~~~~
